--- a/server/web/static/uploadProblem.html
+++ b/server/web/static/uploadProblem.html
@@ -7,6 +7,6 @@
 </head>
 <body style="font-family: sans;">
 <form method="post" action="../uploadProblem" enctype="multipart/form-data">
-<p>Problem zip file: <input name="file" id="file" type="file"></input></p><p><input type="submit"/></p></form>
+<p>Problem zip file: <input name="file" id="file" type="file"/></p><p><input type="submit"/></p></form>
 </body>
 </html>
