--- a/public/uploadProblem.html
+++ b/public/uploadProblem.html
@@ -20,24 +20,31 @@
 <p>Alternatively, upload a zip file: <input name="file" id="file" type="file"/></p>
 <p><input id="upload" type="submit" value="Upload zip file" disabled="disabled"/></p></form>
 <script type="text/javascript">
-var n = 1
-$('#addfile').click(function() {
-    n++
-    let i = n
-    $('<div id="item' + i + '"><p>File name: <input id="filename' + i + '" name="filename' + i 
-            + '" size="25" type="text"/> <button id="delete' + i 
-            +'" type="button">Delete</button></p><p><textarea id="contents' + i + '" name="contents' + i 
-            + '" rows="24" cols="80"/></textarea></p></div>').insertBefore('#addfilecontainer')
-    $('#delete' + i).click(function() {
-        $('#filename' + i).attr('value', '')
-        $('#contents' + i).html('')
-        $('#item' + i).hide()
+let fileIndex = 1
+
+document.getElementById('addfile').addEventListener('click',
+  function() {
+    fileIndex++
+    let fileDiv = document.createElement('div')
+    fileDiv.setAttribute('id', 'item' + fileIndex)
+    fileDiv.innerHTML = '<p>File name: <input id="filename' + fileIndex + '" name="filename' + fileIndex 
+            + '" size="25" type="text"/> <button id="delete' + fileIndex 
+            +'" type="button">Delete</button></p><p><textarea id="contents' + fileIndex + '" name="contents' + fileIndex 
+            + '" rows="24" cols="80"/></textarea></p>'
+    let addFile = document.getElementById('addfilecontainer')
+    addFile.parentNode.insertBefore(fileDiv, addFile)
+    
+    document.getElementById('delete' + fileIndex).addEventListener('click',
+      function() {
+        document.getElementById('filename' + fileIndex).setAttribute('value', '')
+        document.getElementById('contents' + fileIndex).innerHTML = ''
+        document.getElementById('item' + fileIndex).style.display = 'none'
     })
 })
 
-$('#file').on("change", function() {
-    $('#upload').prop('disabled', !$(this).val()); 
-});
+document.getElementById('file').addEventListener('change', function() {
+    document.getElementById('upload').disabled = false
+})
 </script>
 </body>
 </html>
