--- a/public/uploadSingleFile.html
+++ b/public/uploadSingleFile.html
@@ -16,11 +16,26 @@
     </div>
 </form>
 <script type="text/javascript">
-var n = 1
-$('#addfile').click(function() {
-    n++
-    $('<p>File name: <input name="filename"' + n + ' size="25" type="text"/></p>').insertBefore('#addfile')
-    $('<p><textarea name="contents' + n + '" rows="24" cols="80"/></textarea></p>').insertBefore('#addfile')
+let fileIndex = 1
+
+document.getElementById('addfile').addEventListener('click',
+  function() {
+    fileIndex++
+    let fileDiv = document.createElement('div')
+    fileDiv.setAttribute('id', 'item' + fileIndex)
+    fileDiv.innerHTML = '<p>File name: <input id="filename' + fileIndex + '" name="filename' + fileIndex 
+            + '" size="25" type="text"/> <button id="delete' + fileIndex 
+            +'" type="button">Delete</button></p><p><textarea id="contents' + fileIndex + '" name="contents' + fileIndex 
+            + '" rows="24" cols="80"/></textarea></p>'
+    let addFile = document.getElementById('addfilecontainer')
+    addFile.parentNode.insertBefore(fileDiv, addFile)
+    
+    document.getElementById('delete' + fileIndex).addEventListener('click',
+      function() {
+        document.getElementById('filename' + fileIndex).setAttribute('value', '')
+        document.getElementById('contents' + fileIndex).innerHTML = ''
+        document.getElementById('item' + fileIndex).style.display = 'none'
+    })
 })
 </script>
 <hr/>
