added divs to every text editor and ace editor

--- a/public/uploadProblem.html
+++ b/public/uploadProblem.html
@@ -9,7 +9,7 @@
 <body style="font-family: sans-serif;">
 <form method="post" action="../uploadFiles">
     <div>
-    <p>File name is this going to change: <input name="filename1" size="25" type="text"/></p>
+    <p>File name: <input name="filename1" size="25" type="text"/></p>
     <p><textarea name="contents1" rows="24" cols="80"></textarea></p>
     <div id="addfilecontainer">Need more files? <button id="addfile" type="button">Add file</button></div>
     <div><input type="submit" value="Submit files"/></div>
